# modulo-manus

./: .gitignore  README.md  __manifest__.py  a.sh  analyze_dependencies.sh  audit_log_20251005_221237.txt  audit_odoo.sh  auditoria_odoo_modulo.sh  autoconfig_odoo_workers.sh  b.sh  c.sh  check_dependencies.sh  check_module_structure.sh  cleanup_project.sh  code_review_report_20251115_175942.txt  code_review_report_20251115_183514.txt  complete_analysis_report_20251115_060359.txt  complete_analysis_report_20251115_064912.txt  d.sh  deep_analysis.sh  deep_analysis_report.txt  deploy_odoo.sh  docker-compose.yml  e.sh  find_missing_dependencies.sh  fix_odoo_error.sh  module_review_report.txt  preinstall_check.py  preinstall_guardian_inmoser.sh  recommendations_20251115.md  restart_odoo.sh  review_odoo_module.py  update_inmoser.sh
controllers/: __init__.py  client_portal.py
custom_addons/: audit_report_20251115_202253.txt  e.sh
data/: cron_jobs.xml  email_templates.xml  ir_sequence_data.xml  manus_data.xml  service_type_data.xml
demo/: demo_data.xml
models/: __init__.py  account_integration.py  hr_employee_extension.py  hr_employee_integration.py  hr_integration.py  manus.py  qr_code_generator.py  res_partner_extension.py  service_equipment.py  service_order.py  service_order_business_logic.py  service_order_refaction_line.py  service_type.py  stock_history.py  stock_integration.py
oca_addons/oca-contract/setup/_metapackage/: pyproject.toml
reports/: equipment_history_template.xml  service_order_report.py  service_order_report.xml  service_order_template.xml  (+1 more)
(+87 files in other folders)
